# AlignTrajectory

./: CMakeLists.txt  README.md
examples/: RGBDVO7-7-7-10.txt  cam0_gt.visim  orbslam_traj.txt
src/: AlignTrajectory.cpp  AlignTrajectory.cpp~  AlignTrajectory.h  AlignTrajectory.h~  Viewer.cpp  Viewer.h  main.cpp
